@@ -1,5 +1,7 @@
 package org.example;
 
+import org.apache.commons.lang3.StringUtils;
+
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.ServletRequest;
@@ -14,10 +16,11 @@ import java.time.LocalTime;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 
 @WebServlet("/garage")
 public class CarServlet extends HttpServlet {
-    public static Garage garage = new Garage();
+    private Garage garage = Garage.getInstance();
 
 
     @Override
@@ -30,17 +33,19 @@ public class CarServlet extends HttpServlet {
     @Override
     public void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
-        if (req.getParameter("id") == null || req.getParameter("id").isBlank()) {
-            req.setAttribute("garage", garage);
+        String id = req.getParameter("id");
+
+        if (StringUtils.isBlank(id)) {
+            req.setAttribute("garage", garage.getCars());
             req.getRequestDispatcher("/garage.jsp").forward(req, resp);
 
         } else {
-            int id = Integer.valueOf(req.getParameter("id"));
-            Optional<Car> car = garage.getCar(id);
+            int idInt = Integer.valueOf(id);
+            Optional<Car> car = garage.getCar(idInt);
             Car resultCar = car.orElseThrow();
-            Garage garage = new Garage();
-            garage.addCar(resultCar);
-            req.setAttribute("garage", garage);
+            Map<Integer, Car> cars = new ConcurrentHashMap<>();
+            cars.put(resultCar.getId(), resultCar);
+            req.setAttribute("garage", cars);
             req.getRequestDispatcher("/garage.jsp").forward(req, resp);
 
 
@@ -54,7 +59,7 @@ public class CarServlet extends HttpServlet {
         String id = req.getParameter("id");
         String name = req.getParameter("name");
         String color = req.getParameter("color");
-        if (id != null && name != null) {
+        if (!(StringUtils.isAnyBlank(id, name, color))) {
             resp.setStatus(201);
             garage.addCar(new Car(Integer.valueOf(id), name, color));
         } else {
@@ -81,12 +86,10 @@ public class CarServlet extends HttpServlet {
         String id = req.getParameter("id");
         String name = req.getParameter("name");
         String color = req.getParameter("color");
-        boolean isIdNull = (id == null);
-        boolean isNameNull = (name == null);
-        boolean isColorNull = (color == null);
+
         boolean containsKey = garage.getCars().containsKey(Integer.valueOf(id));
 
-        if ((!isIdNull) && (!isNameNull) && containsKey && (!isColorNull)) {
+        if (containsKey && !(StringUtils.isAnyBlank(id, name, color))) {
             garage.getCars().replace(Integer.valueOf(id), new Car(Integer.valueOf(id), name, color));
         } else {
             resp.setStatus(400);
